# tix

./: AGENTS.md  Cargo.toml  PLAN.md  README.md  SKKDZKDKZD
tix-core/: Cargo.toml
tix-core/src/: error.rs  flags.rs  header.rs  lib.rs  message.rs  packet.rs
tix-core/src/codec/: mod.rs
tix-core/src/network/: connection.rs  mod.rs
tix-core/src/protocol/: file.rs  mod.rs  screen.rs  shell.rs
tix-core/src/rdp/: bandwidth.rs  capture.rs  client.rs  decoder.rs  delta.rs  encoder.rs  input.rs  mod.rs  service.rs  transport.rs  types.rs
tix-core/src/state/: connection.rs  master.rs  mod.rs  slave.rs
tix-core/src/task/: mod.rs
tix-core/tests/: integration.rs
tix-master/: Cargo.toml
tix-master/src/: app.rs  app.txt  lib.rs  main.rs  master.rs
tix-rdp-gui/: Cargo.toml
tix-rdp-gui/src/: config.rs  connection.rs  display.rs  input.rs  lib.rs  main.rs  window.rs
tix-rdp-slave/: Cargo.toml
tix-rdp-slave/src/: config.rs  lib.rs  main.rs  service.rs  win_service.rs
tix-slave/: Cargo.toml
tix-slave/src/: main.rs
