[package]
name = "tix-core"
version = "0.2.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
blake3 = "1.8"

# Byte manipulation
bytes = "1.11"
bitflags = "2.9"

# Error handling
thiserror = "2.0"

# Codec / framing
tokio-util = { version = "0.7", features = ["codec", "time"] }
futures = "0.3"

# Async trait
async-trait = "0.1"

# Compression (Phase 7 — screen encoding)
zstd = "0.13"

# Windows APIs (Phase 7 — DXGI capture, input injection)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tokio-test = "0.4"
