[package]
name = "tix-slave"
version = "0.1.0"
edition = "2024"

[dependencies]
tix-core = {path="../tix-core"}
tokio = { version = "1", features = ["full"] }
blake3 = "1.8.3"
bytes = "1.11"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.18"
futures = "0.3.31"
async-trait = "0.1.89"
fs_extra = "1.3.0"
